modify first page layout

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <meta property="og:url" content="http://thepeak.viplaunch.sg/index.html" />
     <meta property="og:site_name" content="The Peak @ Cambodia" />
     <meta property="og:description" content="The Peak @ Cambodia">
-    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
+    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/03.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="2000">
     <meta property="og:image:height" content="1520">
@@ -63,7 +63,6 @@
     <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
 
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
     <link rel="stylesheet" type="text/css" href="css/viplaunch.min.css" media="screen">
 
@@ -143,7 +142,7 @@
                         <li><a href="sitemap/">Site Map</a></li>
                         <li><a href="price/">Price</a></li>
                         <li><a href="payment/">Payment</a></li>
-                        <li><a href="register/">Register Interest</a></li>
+                        <li><a href="#register">Register Interest</a></li>
                         <li><a href="zh/">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -157,7 +156,7 @@
                 <li><a href="sitemap/">Site Map</a></li>
                 <li><a href="price/">Price</a></li>
                 <li><a href="payment/">Payment</a></li>
-                <li><a href="register/">Register Interest</a></li>
+                <li><a href="#register">Register Interest</a></li>
                 <li><a href="zh/">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
@@ -176,83 +175,154 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-10">
+                <div class="page-content col-md-12">
 
-                    <p style="font-family: Crimson Text; font-size: 20px">
-                        3 blocks of 55 storey retail hotel & service apartment
-                    </p>
-
-                    <p>
-                    <ul>
-                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Developers: </Strong>Oxley Gem (Cambodia) Co. Ltd</li>
-                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Units: </Strong>1014</li>
-                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Expected TOP: </Strong>Dec 2020</li>
-                        <li style="font-family: Crimson Text; font-size: 16px"><Strong>Address: </Strong>Village No. 14 SamDach Hun Sen Road</li>
-                    </ul>
-                    </p>
-
-                    <p>
-                    <ul>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Excellent Location in Phnom Penh, BKK1 district </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Special VIP Privileges at Shangri-La Cambodia </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Integrated Mixed Development with 5 storey Mall & Offices </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> 12% Nett Guaranteed Rental Returns over 2 years </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Singapore SGX-listed Developer Oxley International </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Highly Popular with Elite Cambodians – over 30% sold in 1 day </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> River View East Facing & City View West Facing Units </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Freehold </li>
-                        <li style="font-family: 'Courgette', cursive; font-size: 14px;"><i class="fa fa-check-square-o"></i> Very Attractive Price from only USD19*K before discounts </li>
-                    </ul>
-                    </p>
-
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/01.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/02.jpg" style="width:100%;">
-                    </p>
                     <p>
                         <img alt="The Peak @ Cambodia" class="lazy" data-original="images/03.jpg" style="width:100%;">
                     </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/04.jpg" style="width:100%;">
+
+                    <p class="text-center">
+                        <span style="font-size: 35px; margin-top: 50px; margin-bottom: 30px; display:block">
+                            The Peak @ Cambodia with Shangri-la Hotel next door
+                        </span>
                     </p>
+
+                    <p>
+                        <span style="font-size: 15px; margin-top: 10px; margin-bottom: 10px; display:block">
+                            After the successful launch of The Bridge, Oxley &amp; Worldbridge is launching another exciting iconic development.
+                            The Peak comes clad in stylish bronze, a definite colour of luxury. The two towers comprising about 500 units each
+                            are paragons of dynamic architecture, specially crafted to bring out the finest of the site and tis surrounds.
+                        </span>
+                    </p>
+
+                    <p>
+                        <span style="font-size: 15px; margin-top: 10px; margin-bottom: 10px; display:block">
+                            Rising 55 storeys into the sky, The Peak is an oasis of luxury in the clouds, an integrated mixed-use development of
+                            residences, shops, restaurants, offices like no other.
+                        </span>
+                    </p>
+
                     <p>
                         <img alt="The Peak @ Cambodia" class="lazy" data-original="images/05.jpg" style="width:100%;">
                     </p>
+
                     <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/06.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/07.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/08.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/09.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/10.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/11.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/12.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/13.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/14.jpg" style="width:100%;">
-                    </p>
-                    <p>
-                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/15.jpg" style="width:100%;">
+                        <span style="font-size: 15px; margin-top: 10px; margin-bottom: 30px; display:block">
+                            Sharing the same desired address as the Shangri-La Hotel is a mark of distinction.
+                        </span>
                     </p>
 
                 </div>
             </div>
+
+            <div class="project-page row">
+
+                <!-- Left Panel -->
+                <div class="page-content col-md-6">
+                    <div class="item">
+                        <p>
+                        <span style="font-family: 'Courgette', cursive; font-size: 20px; display:block">
+                            10 Reasons Why Invest In the Peak!
+                        </span>
+                        </p>
+
+                        <p>
+                        <ul>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> <strong style="color: red">Nett</strong> Garanteed Rental Returns of 12% over 2 Years! </li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Safety: Mainboard-listed Singapore Developer Oxley </li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> 1st Mover Advantage into an Emerging Economy with High GDP Growth of 7%! </li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Prime Location next to Hotels, Casino, Embassies, Malls</li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Rare FREEHOLD </li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Fully Integrated Mixed Development - Apartments, Offices, Shopping Mall, 5* Shangri-La Hotel </li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Talllest 55-storey Iconic Building (Timeless Design) with Panoramic River & City Views </li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> "Hotel-grade" Faciliteis </li>
+                            <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Limited Supply of Luxury High-Rise Condominiums </li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+                <!-- End Left Panel -->
+
+                <!-- Right Panel -->
+                <div class="project-content col-md-6">
+                    <img alt="The Peak @ Cambodia" class="lazy" data-original="images/13.jpg" style="width:100%;">
+                </div>
+
+            </div>
+
+            <section id="register" style="padding-bottom: 30px"></section>
+
+            <div class="project-page row">
+
+                <!-- Left Panel -->
+                <div class="page-content col-md-8">
+                    <div class="item">
+                        <img alt="The Peak @ Cambodia" class="lazy" data-original="images/14.jpg" style="width:100%;">
+                    </div>
+                </div>
+                <!-- End Left Panel -->
+
+                <!-- Right Panel -->
+                <div class="project-content col-md-4">
+                    <!-- Start Call Action -->
+                    <div class="call-action call-action-boxed call-action-style4 clearfix" id="register-action">
+                        <!-- Call Action Text -->
+                        <h2 style="font-family: 'Courgette', cursive; color: #6a3da3">Register Your Interest Now</h2>
+                        <ul style="font-family: 'Courgette', cursive; font-size: 16px; color: #6a3da3">
+                            <li><span><i class="fa fa-gift"></i> Receive most updated info</span></li>
+                            <li><span><i class="fa fa-gift"></i> Receive VVIP Preview Details</span></li>
+                            <li><span><i class="fa fa-gift"></i> Enjoy Early Bird Discount</span></li>
+                        </ul>
+                        <!-- Start Contact Form -->
+                        <form role="form" class="contact-form" id="contact-form" method="post">
+                            <input type="hidden" name="_subject" value="Register: The Peak @ Cambodia" />
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="text" placeholder="Name" name="name">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="text" placeholder="Phone" name="phone">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="email" class="email" placeholder="Email" name="email">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    <input type="text" placeholder="Country of Residence (default: Singapore)" name="country">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <div class="controls">
+                                    Preferred Unit Type: <br/>
+                                    <input name="unitType" type="checkbox" id="cbox1" value="apartment studio"/> <label for="cbox1">Studio</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox2" value="1-bedroom"/> <label for="cbox2">1-bedroom</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox3" value="2-bedroom"/> <label for="cbox3">2-bedroom</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox4" value="3-bedroom"/> <label for="cbox4">3-bedroom</label><br/>
+                                    <input name="unitType" type="checkbox" id="cbox5" value="Penthouse"/> <label for="cbox5">Penthouse</label>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="controls">
+                                    <textarea rows="5" placeholder="I am interested in The Peak @ Cambodia. Please contact me. Thanks." name="message"></textarea>
+                                </div>
+                            </div>
+                            <div class="button-side" style="margin-top:10px;">
+                                <a href="#" class="btn-system border-btn btn-medium" id="contact-btn"><i class="icon-basket"></i> Register</a>
+                            </div>
+                        </form>
+                        <!-- End Contact Form -->
+                    </div>
+                    <!-- End Call Action -->
+                </div>
+                <!-- End Right Panel -->
+            </div>
+
         </div>
     </div>
     <!-- End Content -->
