--- a/payment/index.html
+++ b/payment/index.html
@@ -48,7 +48,7 @@
     <meta property="og:url" content="http://thepeak.viplaunch.sg/index.html" />
     <meta property="og:site_name" content="The Peak @ Cambodia" />
     <meta property="og:description" content="The Peak @ Cambodia">
-    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
+    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/03.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="2000">
     <meta property="og:image:height" content="1520">
@@ -60,7 +60,7 @@
     <meta name="twitter:creator" content="@viplaunch">
     <meta name="twitter:title" content="The Peak @ Cambodia">
     <meta name="twitter:description" content="The Peak @ Cambodia">
-    <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
+    <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/03.jpg">
 
     <link href='https://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
 
@@ -142,7 +142,7 @@
                         <li><a href="../sitemap/">Site Map</a></li>
                         <li><a href="../price/" >Price</a></li>
                         <li><a href="#" class="active">Payment</a></li>
-                        <li><a href="../register/">Register Interest</a></li>
+                        <li><a href="../#register">Register Interest</a></li>
                         <li><a href="../zh/">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -156,7 +156,7 @@
                 <li><a href="../sitemap/">Site Map</a></li>
                 <li><a href="../price/" >Price</a></li>
                 <li><a href="#" class="active">Payment</a></li>
-                <li><a href="../register/">Register Interest</a></li>
+                <li><a href="../#register">Register Interest</a></li>
                 <li><a href="../zh/">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
@@ -175,7 +175,7 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-8">
+                <div class="page-content col-md-10">
 
                     <h4 class="classic-title"><span>The Peak Payment Schedule</span></h4>
                     <ol>
