--- a/zh/index.html
+++ b/zh/index.html
@@ -48,7 +48,7 @@
     <meta property="og:url" content="http://thepeak.viplaunch.sg/index.html" />
     <meta property="og:site_name" content="The Peak @ Cambodia" />
     <meta property="og:description" content="The Peak @ Cambodia">
-    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
+    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/03.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="2000">
     <meta property="og:image:height" content="1520">
@@ -60,7 +60,7 @@
     <meta name="twitter:creator" content="@viplaunch">
     <meta name="twitter:title" content="The Peak @ Cambodia">
     <meta name="twitter:description" content="The Peak @ Cambodia">
-    <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
+    <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/03.jpg">
 
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
 
@@ -190,7 +190,7 @@
                 <!-- End Left Panel -->
 
                 <!-- Right Panel -->
-                <div class="project-content col-md-4">
+                <div class="project-content col-md-6">
                     <h4><span>The Peak - 与香格里拉毗邻而居</span></h4>
                     <p>The Peak 由新加坡上市公司豪利国际（Oxley International Holdings）精心策划发展，集合住宅，商铺，办公室和酒店与一体。</p>
                     <p>The Peak 的外层为时尚的古铜色，象征着奢华华贵。精心设计的双子大厦宏伟壮观，并各拥有大约500间住宅。</p>
@@ -216,7 +216,7 @@
                 <!-- End Left Panel -->
 
                 <!-- Right Panel -->
-                <div class="project-content col-md-4">
+                <div class="project-content col-md-6">
                     <p>The Peak 坐落在柬埔寨金边的中心地带，毗邻河畔大道，坐拥这座城市的交叉路口，前往周边的永旺梦乐城，金界酒店，国民议会大楼，外交部和澳洲大使馆等地仅需步行几分钟，地理位置无比适中优越。独立纪念碑及Preah Sihanouk 大道距离也仅是短车程。</p>
                     <table class="table table-condensed table-hover borderless">
                         <thead>
@@ -286,8 +286,8 @@
                 <!-- End Left Panel -->
 
                 <!-- Right Panel -->
-                <div class="project-content col-md-4">
-                    <h4>发展商承诺给予买家首两年12%的净投资回报率</h4>
+                <div class="project-content col-md-6">
+                    <h4>发展商承诺给予买家首两年<span style="color: red">12%的净投资回报率</span></h4>
                     <table class="table table-condensed table-striped table-hover">
                         <thead>
                         <th colspan="2">价格 (美元)</th>
@@ -372,7 +372,7 @@
                 <!-- End Left Panel -->
 
                 <!-- Right Panel -->
-                <div class="project-content col-md-4">
+                <div class="project-content col-md-6">
                     <h4>即刻向新加坡销售代理登记以获取最新折扣和优惠</h4>
                     <!-- Start Call Action -->
                     <div class="call-action call-action-boxed call-action-style4 clearfix" id="register-action">
