--- a/location/index.html
+++ b/location/index.html
@@ -48,7 +48,7 @@
     <meta property="og:url" content="http://thepeak.viplaunch.sg/index.html" />
     <meta property="og:site_name" content="The Peak @ Cambodia" />
     <meta property="og:description" content="The Peak @ Cambodia">
-    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
+    <meta property="og:image" content="http://thepeak.viplaunch.sg/images/03.jpg">
     <meta property="og:image:type" content="image/jpg">
     <meta property="og:image:width" content="2000">
     <meta property="og:image:height" content="1520">
@@ -60,7 +60,7 @@
     <meta name="twitter:creator" content="@viplaunch">
     <meta name="twitter:title" content="The Peak @ Cambodia">
     <meta name="twitter:description" content="The Peak @ Cambodia">
-    <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/01.jpg">
+    <meta name="twitter:image" content="http://thepeak.viplaunch.sg/images/03.jpg">
 
     <link href='https://fonts.googleapis.com/css?family=Courgette' rel='stylesheet' type='text/css'>
 
@@ -142,7 +142,7 @@
                         <li><a href="../sitemap/">Site Map</a></li>
                         <li><a href="../price/">Price</a></li>
                         <li><a href="../payment/">Payment</a></li>
-                        <li><a href="../register/">Register Interest</a></li>
+                        <li><a href="../#register">Register Interest</a></li>
                         <li><a href="../zh/">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -156,7 +156,7 @@
                 <li><a href="../sitemap/">Site Map</a></li>
                 <li><a href="../price/">Price</a></li>
                 <li><a href="../payment/">Payment</a></li>
-                <li><a href="../register/">Register Interest</a></li>
+                <li><a href="../#register">Register Interest</a></li>
                 <li><a href="../zh/">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
@@ -175,9 +175,20 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-10">
+                <div class="page-content col-md-8">
                     <p>
                         <img alt="The Peak @ Cambodia" src="../images/The-Peak-Location.png" style="width:100%;">
+                    </p>
+                </div>
+                <div class="page-content col-md-4">
+                    <p>
+                        <span style="font-size: 15px;">
+                        Time is precious, and so is this location, for a mere minutes' walk is all that is needed to
+                        get to AEON Mall and Mega World, as well as the National Assembly building, the Ministry of
+                        Foreign Affairs and the Australian Embassy. The Independence Monument is also a short drive
+                        away. Being the tallest development in Phnom Penh, units will be able to enjoy panoramic
+                        cityview and superb view of Mekong River.
+                        </span>
                     </p>
                 </div>
             </div>
