modify first page layout

--- a/index.html
+++ b/index.html
@@ -319,6 +319,13 @@
                         <!-- End Contact Form -->
                     </div>
                     <!-- End Call Action -->
+
+                    <!-- Start Call Action -->
+                    <div class="call-action call-action-boxed call-action-style4 clearfix" style="display:none; padding: 10px" id="register-successful">
+                        <h2 style="font-family: 'Courgette', cursive; color: #6a3da3">Thank you for registration.</h2>
+                    </div>
+                    <!-- End Call Action -->
+
                 </div>
                 <!-- End Right Panel -->
             </div>
