modify js packages

--- a/location/index.html
+++ b/location/index.html
@@ -179,14 +179,17 @@
                     </p>
                 </div>
                 <div class="page-content col-md-4">
-                    <p>
-                        <span style="font-size: 15px;">
-                        Time is precious, and so is this location, for a mere minutes' walk is all that is needed to
-                        get to AEON Mall and Mega World, as well as the National Assembly building, the Ministry of
-                        Foreign Affairs and the Australian Embassy. The Independence Monument is also a short drive
-                        away. Being the tallest development in Phnom Penh, units will be able to enjoy panoramic
+                    <p style="font-size: 15px;">
+                        Time is precious, and so is this location.
+                    </p>
+                    <p style="font-size: 15px;">
+                        For a mere minutes' walk is all that is needed to get to AEON Mall and Mega World, as well as the
+                        National Assembly building, the Ministry of Foreign Affairs and the Australian Embassy. The
+                        Independence Monument is also a short drive away.
+                    </p>
+                    <p style="font-size: 15px;">
+                        Being the tallest development in Phnom Penh, units will be able to enjoy panoramic
                         cityview and superb view of Mekong River.
-                        </span>
                     </p>
                 </div>
             </div>
