--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -140,7 +140,7 @@
                         <li><a href="#" class="active">Site Map</a></li>
                         <li><a href="../price/">Price</a></li>
                         <li><a href="../payment/">Payment</a></li>
-                        <li><a href="../register/">Register Interest</a></li>
+                        <li><a href="../#register">Register Interest</a></li>
                         <li><a href="../zh/">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -154,7 +154,7 @@
                 <li><a href="#" class="active">Site Map</a></li>
                 <li><a href="../price/">Price</a></li>
                 <li><a href="../payment/">Payment</a></li>
-                <li><a href="../register/">Register Interest</a></li>
+                <li><a href="../#register">Register Interest</a></li>
                 <li><a href="../zh/">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
