--- a/zh/index.html
+++ b/zh/index.html
@@ -142,7 +142,7 @@
                         <li><a href="../sitemap/">Site Map</a></li>
                         <li><a href="../price/">Price</a></li>
                         <li><a href="../payment/">Payment</a></li>
-                        <li><a href="../register/">Register Interest</a></li>
+                        <li><a href="../#register">Register Interest</a></li>
                         <li><a href="#" class="active">中文</a></li>
                     </ul>
                     <!-- End Navigation List -->
@@ -156,7 +156,7 @@
                 <li><a href="../sitemap/">Site Map</a></li>
                 <li><a href="../price">Price</a></li>
                 <li><a href="../payment/">Payment</a></li>
-                <li><a href="../register/">Register Interest</a></li>
+                <li><a href="../#register">Register Interest</a></li>
                 <li><a href="#" class="active">中文</a></li>
             </ul>
             <!-- Mobile Menu End -->
@@ -423,6 +423,13 @@
                         <!-- End Contact Form -->
                     </div>
                     <!-- End Call Action -->
+
+                    <!-- Start Call Action -->
+                    <div class="call-action call-action-boxed call-action-style4 clearfix" style="display:none; padding: 10px" id="register-successful">
+                        <h2 style="font-family: 'Courgette', cursive; color: #6a3da3">谢谢你的留言, 我们将尽快与你联系.</h2>
+                    </div>
+                    <!-- End Call Action -->
+
                 </div>
                 <!-- End Right Panel -->
 
