modify 10 reasons style

--- a/index.html
+++ b/index.html
@@ -220,13 +220,10 @@
                 <!-- Left Panel -->
                 <div class="page-content col-md-6">
                     <div class="item">
-                        <p>
-                        <span style="font-family: 'Courgette', cursive; font-size: 20px; display:block">
+                        <div style="background: url(images/patterns/farmer.png); padding: 10px">
+                        <p style="font-family: 'Courgette', cursive; font-size: 20px; display:block">
                             10 Reasons Why Invest In the Peak!
-                        </span>
                         </p>
-
-                        <p>
                         <ul>
                             <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> <strong style="color: red">Nett</strong> Garanteed Rental Returns of 12% over 2 Years! </li>
                             <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Safety: Mainboard-listed Singapore Developer Oxley </li>
@@ -238,7 +235,7 @@
                             <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> "Hotel-grade" Faciliteis </li>
                             <li style="font-family: 'Courgette', cursive; font-size: 15px;"><i class="fa fa-check-square-o"></i> Limited Supply of Luxury High-Rise Condominiums </li>
                         </ul>
-                        </p>
+                        </div>
                     </div>
                 </div>
                 <!-- End Left Panel -->
