--- a/zh/index.html
+++ b/zh/index.html
@@ -192,7 +192,7 @@
                 <!-- Right Panel -->
                 <div class="project-content col-md-6">
                     <h4><span>The Peak - 与香格里拉毗邻而居</span></h4>
-                    <p>The Peak 由新加坡上市公司豪利国际（Oxley International Holdings）精心策划发展，集合住宅，商铺，办公室和酒店与一体。</p>
+                    <p>The Peak 由新加坡上市公司豪利国际（Oxley International Holdings）精心策划发展，集合住宅，商铺，办公室和酒店于一体。</p>
                     <p>The Peak 的外层为时尚的古铜色，象征着奢华华贵。精心设计的双子大厦宏伟壮观，并各拥有大约500间住宅。</p>
                     <p>位于55层的观景台让您远眺金边市，钻石岛，洞里萨河和每时每刻都焕光流彩的城市美景。您可以在泳池平台上沐浴阳光，也可以沉进摩浴池（Jacuzzi）中洗去疲劳。还可以步行下螺旋阶梯，景观健身房和景观酒廊于此恭候您的光临。</p>
                 </div>
@@ -253,7 +253,7 @@
                         </tr>
                         <tr>
                             <td>8. </td>
-                            <td>总价低， 价格从USD19xK起。</td>
+                            <td>总价低， 价格从USD19万起。</td>
                         </tr>
                         <tr>
                             <td>9. </td>
@@ -373,7 +373,7 @@
 
                 <!-- Right Panel -->
                 <div class="project-content col-md-6">
-                    <h4>即刻向新加坡销售代理登记以获取最新折扣和优惠</h4>
+                    <h4>即刻向新加坡销售代理登记以获取<span style="color: red">最新折扣和优惠</span></h4>
                     <!-- Start Call Action -->
                     <div class="call-action call-action-boxed call-action-style4 clearfix" id="register-action">
                         <!-- Call Action Text -->
