modify image size

--- a/sitemap/index.html
+++ b/sitemap/index.html
@@ -18,7 +18,7 @@
 
     <!-- Page Description and Author -->
     <meta name="description" content="The Peak @ Cambodia">
-    <meta name="keywords" content="The Peak @ Cambodia, The Peak Cambodia, The Peak properties, The Peak real estate, The Peak photo, The Peak address, The Peak location, Cambodia project, Cambodia properties, Cambodia real estate">
+    <meta name="keywords" content="The Peak @ Cambodia, The Peak Cambodia, The Peak properties, The Peak real estate, The Peak photo, The Peak address, The Peak location, The Peak site map, The Peak price, The Peak payment, The Peak Cambodia project, Cambodia properties, Cambodia real estate">
     <meta name="author" content="jadewu@viplaunch.sg">
 
     <!-- favicon -->
@@ -173,7 +173,7 @@
         <div class="container">
 
             <div class="project-page row">
-                <div class="page-content col-md-12">
+                <div class="page-content col-md-10">
                     <p>
                         <img alt="The Peak @ Cambodia" class="lazy" data-original="../images/sitemap1.jpg" style="width:100%;">
                         <img alt="The Peak @ Cambodia" class="lazy" data-original="../images/sitemap2.jpg" style="width:100%;">
