--- a/payment/index.html
+++ b/payment/index.html
@@ -18,7 +18,7 @@
 
     <!-- Page Description and Author -->
     <meta name="description" content="The Peak @ Cambodia">
-    <meta name="keywords" content="The Peak @ Cambodia, The Peak Cambodia, The Peak properties, The Peak real estate, The Peak photo, The Peak address, The Peak location, Cambodia project, Cambodia properties, Cambodia real estate">
+    <meta name="keywords" content="The Peak @ Cambodia, The Peak Cambodia, The Peak properties, The Peak real estate, The Peak photo, The Peak address, The Peak location, The Peak site map, The Peak price, The Peak payment, The Peak Cambodia project, Cambodia properties, Cambodia real estate">
     <meta name="author" content="jadewu@viplaunch.sg">
 
     <!-- favicon -->
